[package]
name = "bonsai-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
timer = "0.2.*"
rppal = "0.13.*"
postgres = {version = "0.19.*", features = ["with-chrono-0_4"] }
systemd = "0.10"
